--- a/Report/Intro.Rmd
+++ b/Report/Intro.Rmd
@@ -7,6 +7,9 @@ source(here::here("Setup/set.R"))
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+
+![](https://static.politico.com/dims4/default/8a5b708/2147483647/resize/1920x/quality/90/?url=https%3A%2F%2Fstatic.politico.com%2F39%2Fd2%2F783ae66a4ea78cbc44628c3566dd%2Fpolice-officers-whos-next.png)
+
 # Table of content 
 
 1. **Introduction**
@@ -14,7 +17,6 @@ knitr::opts_chunk$set(echo = TRUE)
     + Objective
 
 2. **Data**
-    + Sources
     + Description
 
 3. **Exploratory Data Analysis**
@@ -34,7 +36,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Purpose
 
-Since the “Black Lives Matter” movement, the media have put in light the police violence and discrimination towards the public. Their feeling of power push them to behave like they’re above the law. In 2021, already 827 people have been killed by the police in the USA, 28% of them are Black people.
+Since the “Black Lives Matter” movement, the media have put in light the police violence and discrimination towards the public. Their feeling of power push them to behave like they’re above the law. In 2021, already 996 people have been killed by the police in the USA, 27% of them are Black people.
 Do black people have a tendency to do more crimes or is the police racist ?
  
 We thought it would be interesting to go deeper in this analysis and discover the factors of killing rate and what influences the police to be more violent or not. We chose the United States because we knew we would find more data, moreover, having 50 states with different law policies, it is easier to compare.
@@ -48,4 +50,15 @@ In the searching of our variables of interest, we found that the location (state
  
 We were motivated on this project because we think police violence is a good description of how the world is right now : separated, with still a lot of discrimination, corruption and inequalities. Every day we can see new evidence of how the police behave through social media, but can we believe everything we see ? That’s why we chose this project.
 
-Is being black is a risk factor of getting shot by the police? Are republican states more willing to shoot offenders and show more racial bias? Our final objective would be to see if it is possible to predict the disparity between black and white people shot by the police according to the state demographic and politics. This will help states to put in place laws and awareness among police forces.
+## Objective 
+
+
+We want to observe, analyse and understand if the police is more willing to shoot a black person than a white person.
+We think that if a state is rather democratic or republican we can observe differences among the number of black and white people shot. We expect republican states to have more racial bias on police shooting compared to democrat ones.
+
+Obviously, the race is also correlated to the political party of a state; white male are more willing to vote for republicans than black male. 
+
+We want to see how black and white disparities have evolved through the years and which variables influence them. Also we think that all these factors are correlated together : race , politics and police killings. Maybe we can explore other variables such as the the crime rate of a state by race, the police sex, race or age and the charges applied to the police after killing.
+  
+Is being black is a risk factor of getting shot by the police? Are republican states more willing to shoot offenders and show more racial bias? How police forces are judged regarding their position and race ? Our final objective would be to see if it is possible to predict the disparity between black and white people shot by the police according to the state demographic and politics. This will help states to put in place laws and awareness among police forces.
+
