--- a/Report/Report.Rmd
+++ b/Report/Report.Rmd
@@ -9,5 +9,5 @@ output:
     toc_float: true
 ---
 
-```{r child = c('intro.Rmd', 'Data.Rmd','r2.Rmd', 'r1.Rmd', 'Analysis.Rmd')}
+```{r child = c('intro.Rmd', 'Data.Rmd','Eda1.Rmd', 'Eda2.Rmd', 'Analysis.Rmd', 'Conclusion.Rmd')}
 ```
